Add new features

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
  <p>
        Hesitation will draw danger to you like fire but trust the birth you choose but it will protect you.
  </p>
+  <p>This is new feature</p>
